[gd_scene load_steps=4 format=1]

[ext_resource path="res://Main.gd" type="Script" id=1]

[sub_resource type="Theme" id=2]


[sub_resource type="ImageTexture" id=1]

flags = 7
image = Image()
size = Vector2( 0, 0 )
storage = 0
lossy_quality = 0.7

[node name="Panel" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 2 )
margin/left = 99.0
margin/top = 39.0
margin/right = 799.0
margin/bottom = 539.0
script/script = ExtResource( 1 )

[node name="Button1" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 172.0
margin/top = 108.0
margin/right = 539.0
margin/bottom = 196.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = SubResource( 1 )
flat = false

[node name="Label1" type="Label" parent="Button1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 77.0
margin/top = 23.0
margin/right = 304.0
margin/bottom = 73.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 172.0
margin/top = 232.0
margin/right = 542.0
margin/bottom = 325.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label2" type="Label" parent="Button2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 70.0
margin/top = 23.0
margin/right = 292.0
margin/bottom = 69.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button3" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 168.0
margin/top = 365.0
margin/right = 550.0
margin/bottom = 463.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="Label3" type="Label" parent="Button3"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 74.0
margin/top = 27.0
margin/right = 311.0
margin/bottom = 64.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WindowDialog" type="WindowDialog" parent="Button3"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 100.0
popup/exclusive = false
window/title = ""

[node name="Confirmation" type="Label" parent="Button3/WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 391.0
margin/bottom = 33.0
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="YesB" type="Button" parent="Button3/WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 101.0
margin/top = 38.0
margin/right = 176.0
margin/bottom = 68.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="NoB" type="Button" parent="Button3/WindowDialog"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 234.0
margin/top = 38.0
margin/right = 309.0
margin/bottom = 68.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
flat = false

[node name="No" type="Label" parent="Button3/WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 234.0
margin/top = 38.0
margin/right = 304.0
margin/bottom = 63.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Yes" type="Label" parent="Button3/WindowDialog"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 101.0
margin/top = 38.0
margin/right = 171.0
margin/bottom = 63.0
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


